--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -12,7 +12,7 @@
 		<td colspan='3'><center><img src='https://raw.githubusercontent.com/Squidly271/plugin-repository/master/CA.png' style='height:5rem;margin-top:2rem;'></td>
 		</tr>
 		<tr>
-			<td colspan='3'><center><font size='5' color='white'>Community Applications</font></td>
+			<td colspan='3'><center><font size='5'>Community Applications</font></td>
 		</tr>
 		<tr>
 			<td class='ca_credit'><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
