--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -36,8 +36,7 @@ if ( is_file($communityPaths['addConverted']) ) {
 ?>
 <link type='text/css' rel='stylesheet' href="<?=autov("/plugins/community.applications/skins/Narrow/css.php")?>" >
 <link type='text/css' rel='stylesheet' href='<?=autov("/plugins/community.applications/styles/awesomplete.css")?>'>
-<script src='<?autov("/plugins/community.applications/javascript/awesomplete.min.js")?>'></script>
-<script src='<?autov("/plugins/community.applications/javascript/jquery.mobile.custom.min.js")?>'></script>
+<script src='<?autov("/plugins/community.applications/javascript/libraries.js")?>'></script>
 <script>
 var URL = "/plugins/<?=$plugin?>/include/exec.php";
 var last = $('input[name$="tabs"]').length;
