search box wasn't clearing when going back to a startup category

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -201,6 +201,7 @@ function initilizeMenu() {
 
 function updateContent(button) {
 	hideSortIcons();
+	clearSearchBox();
 	$("#Category").html("");
 	$(".caMenuItem").each(function() {
 		$(this).removeClass("selectedMenu");
