--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -9,15 +9,15 @@
 <div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin:auto;width:600px;'>
 	<center><table style='margin-left:auto;padding-top:0px;margin-top:0px;'>
 	<tr>
-		<td colspan='3'><center><img src='https://raw.githubusercontent.com/Squidly271/plugin-repository/master/CA.png' style='height:5rem;margin-top:2rem;'></td>
+		<td colspan='3'><div class='ca_center'><img src='https://raw.githubusercontent.com/Squidly271/plugin-repository/master/CA.png' style='height:5rem;margin-top:2rem;'></div></td>
 		</tr>
 		<tr>
-			<td colspan='3'><center><font size='5'>Community Applications</font></td>
+			<td colspan='3'><div class='ca_center'><font size='5'>Community Applications</font></div></td>
 		</tr>
 		<tr>
 			<td class='ca_credit'><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
-			<td class='ca_credit'><font size='3.5rem;'><em>Andrew Zawadzki</em></font></strong></td>
-			<td><font size='3.5rem;'><em>Main Development</em></font></td>
+			<td class='ca_credit'><font size='4.0rem;'><span class='ca_italic ca_bold'>Andrew Zawadzki</span></font></strong></td>
+			<td><font size='4.0rem;'><span class='ca_italic ca_bold'>Main Development</span></font></td>
 		</tr>
 		<tr>
 			<td></td>
@@ -46,7 +46,7 @@
 		</tr>
 	</table></center>
 	<br>
-	<center><em><font size='1rem;'>Copyright &copy; 2015-2019 Andrew Zawadzki</font></em></center>
-	<center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></center>
-	<center>Ensuring only safe applications are present is a full time job
+	<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2019 Andrew Zawadzki</font></div>
+	<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
+	<div class='ca_center'>Ensuring only safe applications are present is a full time job</div>
 </div>
