--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -862,6 +862,7 @@ function clearCategory() {
 	$("#Category").html("");
 }
 function pinnedApps(button) {
+	mySpinner();
 	setPageOne();
 	hideSortIcons();
 	data.docker = "";
