--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -399,8 +399,8 @@ function myCloseAlert() {
 function mySpinner() {
 	$(".sweet-overlay").css("background-color","rgba(0, 0, 0, 0)");
 	$("div.spinner").show();
-/* 	myAlert("",""," ",150);
- */}
+/* 	myAlert("",""," ",150); */
+}
 
 function sweetAlertBackground(color) {
 	$(".sweet-alert").css("background",color);
