--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -346,7 +346,7 @@ function changePage(pageNumber) {
 	animateCSS(".ca_templatesDisplay","fadeOut"+directionOut,function() {
 		$("#templates_content").html("");
 		hideSortIcons();
-   	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected,fontSize:getFontSize()},function(data3) {
+   	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected},function(data3) {
 			if (data3) {
 				updateDisplay(data3,directionIn);
 			}
@@ -407,7 +407,7 @@ function sweetAlertBackground(color) {
 }
 
 function readMore() {
-	$('.desc_readmore').readmore({maxHeight:5*getFontSize(),moreLink:"",lessLink:""});
+	$('.desc_readmore').readmore({maxHeight:100,moreLink:"",lessLink:""});
 }
 
 function doSearch(button,newSearch) {
@@ -459,7 +459,7 @@ function doSearch(button,newSearch) {
 	}
 	mySpinner();
 
-	$.post(URL,{action:'get_content',filter:filter,sortOrder:sortOrder,fontSize:getFontSize()},function(data) {
+	$.post(URL,{action:'get_content',filter:filter,sortOrder:sortOrder},function(data) {
 		if (data) {
 			enableButtons();
 			updateDisplay(data);
@@ -500,7 +500,7 @@ function changeSortOrder(button,buttonClass,previousApps) {
 			startup = "true";
 		}
 	});
-	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected,fontSize:getFontSize(),startup:startup},function(data3) {
+	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected,startup:startup},function(data3) {
 		if (data3) {
 			updateDisplay(data3);
 		}
@@ -566,7 +566,7 @@ function getContent(init,category,description,newApp,startupDisplay) {
 
 		var sortOrder = getSortOrder();
 
-		$.post(URL,{action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,fontSize:getFontSize(),startupDisplay:startupDisplay},function(data) {
+		$.post(URL,{action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,startupDisplay:startupDisplay},function(data) {
 			if (data) {
 				updateDisplay(data);
 
@@ -619,7 +619,7 @@ function dockerSearch(pageNumber) {
 	$("#Category").html("DockerHub Search Results For <font color='<?=$unRaid66color?>'>"+filter+"</font> <span id='pageNumber'></span>");
 	var sortOrder = getSortOrder();
 	mySpinner();
-	$.post(URL,{action:'search_dockerhub',filter:filter,page:pageNumber,sortOrder:sortOrder,fontSize:getFontSize()},function(data) {
+	$.post(URL,{action:'search_dockerhub',filter:filter,page:pageNumber,sortOrder:sortOrder},function(data) {
 		if (data) {
 			updateDisplay(data);
 		}
@@ -684,7 +684,7 @@ function previousApps(button,installed) {
 	$(".dockerSearch").hide();
 	enableIcon("#sortIcon",true);
 
-	$.post(URL,{action:'previous_apps',installed:installed,fontSize:getFontSize()},function(data) {
+	$.post(URL,{action:'previous_apps',installed:installed},function(data) {
 		if (data) {
 			changeSortOrder(null,null,"true");
 			saveState();
@@ -1129,12 +1129,6 @@ function isTouch() {
 <?endif;?>
 }
 
-function getFontSize() {
-	var elem = document.getElementById("fontSize");
-	var fontSize = window.getComputedStyle(elem,null).getPropertyValue("font-size");
-	return fontSize.replace("px","");
-}
-
 function showCredits() {
 	$(".multi_installDiv,.dockerSearch").hide();
 	clearCategory();
@@ -1185,7 +1179,6 @@ function scrollToTop() {
 <?endif;?>
 <div class='dockerDisabled notice'>Docker Service Not Enabled - Only Plugins Available To Be Installed Or Managed</div>
 <div id='warningNotAccepted' style='display:none;'><p class='notice shift'>Installations of apps disabled.  You must accept the warning to be able to install applications.  Click <a onclick='window.location.reload();' style='cursor:pointer;'>HERE</a></p></div>
-<span style='display:none;font-size:1rem;' id='fontSize'>rwar</span>
 <div class='menuItems'>
 <div class='menuHeader'>MENU</div>
 <ul class='caMenu'>
