Remove unused Icon

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -9,7 +9,7 @@
 <div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin:auto;width:600px;'>
 	<center><table style='margin-left:auto;padding-top:0px;margin-top:0px;'>
 	<tr>
-		<td colspan='3'><div class='ca_center'><img src='https://raw.githubusercontent.com/Squidly271/plugin-repository/master/CA.png' style='height:5rem;margin-top:2rem;'></div></td>
+		<td colspan='3'><div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div></td>
 		</tr>
 		<tr>
 			<td colspan='3'><div class='ca_center'><font size='5'>Community Applications</font></div></td>
