--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -603,6 +603,7 @@ function initDockerSearch() {
 	data.section = "";
 	data.selected_category = "";
 	$(".selectedMenu").removeClass("selectedMenu");
+	hideSortIcons();
 	$(".subCategory").hide(300);
 }
 
