Change chart color, don't take into consideration a starting value of null
Update credits also

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -44,6 +44,29 @@
 			<td class='ca_credit'>dockerPolice<br>pluginCop</td>
 			<td class='ca_credit'>Moderation</td>
 		</tr>
+		<tr>
+			<td colspan='3' class='ca_credit'><div class='ca_center'><font size='3'>Additional Libraries</font></div></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class='ca_credit'>Daniel Eden</td>
+			<td class='ca_credit'>Animate.css</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class='ca_credit'>Lea Verou</td>
+			<td class='ca_credit'>Awesomeplete</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class='ca_credit'>JQuery Foundation</td>
+			<td class='ca_credit'>JQuery Mobile</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class='ca_credit'>Chart.js Contributors</td>
+			<td class='ca_credit'>Chart.js</td>
+		</tr>
 	</table></center>
 	<br>
 	<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2019 Andrew Zawadzki</font></div>
