--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed-backup.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed-backup.page
@@ -18,4 +18,4 @@ $appfeed = str_replace(" ","&nbsp;",$appfeed);
 ?>
 <h3>BACKUP APPFEED</h3> switch to <a href='/Apps/Appfeed' target='_self'>Primary AppFeed</a>
 <br><br>
-<?=$appfeed?>
+<font face='courier'><?=$appfeed?></font>
