--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -45,12 +45,12 @@
 			<td class='ca_credit'>Moderation</td>
 		</tr>
 		<tr>
-			<td colspan='3' class='ca_credit'><div class='ca_center'><font size='3'>Additional Libraries</font></div></td>
+			<td colspan='3' class='ca_credit'><div class='ca_center'><font size='3'>Additional Libraries</font><br><font size='0'>(All licenced under MIT licence)</font></div></td>
 		</tr>
 		<tr>
 			<td></td>
 			<td class='ca_credit'>Daniel Eden</td>
-			<td class='ca_credit'>Animate.css</td>
+			<td class='ca_credit'>Animate.css (excerpts)</td>
 		</tr>
 		<tr>
 			<td></td>
@@ -67,9 +67,14 @@
 			<td class='ca_credit'>Chart.js Contributors</td>
 			<td class='ca_credit'>Chart.js</td>
 		</tr>
+		<tr>
+			<td></td>
+			<td class='ca_credit'>Miles Johnson</td>
+			<td class='ca_credit'>XML2Array<br>Array2XML</td>
+		</tr>
 	</table></center>
 	<br>
 	<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2019 Andrew Zawadzki</font></div>
 	<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
 	<div class='ca_center'>Ensuring only safe applications are present is a full time job</div>
-</div>
+</div><br><br>
