Fixed: displaying a special category would leave stats menu selected

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -318,6 +318,7 @@ function modalPluginInstall() {
 }
 
 function showSpecialCategory(button) {
+	$(".caMenuItem").removeClass("selectedMenu");
 	$(".multi_installDiv").hide();
 	data.selected_category = "DOESNTMATTERWHATSHERE";
 	data.section = "AppStore";
